[metadata]
name = babybiome_samplesheet_utils
description = Utils to prepare sample info as tabular data
author = thomas silvers
author_email = silvers@mpiib-berlin.mpg.de
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/fm-key-lab/babybiome_samplesheet_utils
project_urls =
    Documentation = https://github.com/fm-key-lab/babybiome_samplesheet_utils

platforms = any

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

python_requires = >=3.8
install_requires =
    pandas
    pandera

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    setuptools
    pytest
    pytest-cov

[tool:pytest]
addopts =
    --cov babybiome_samplesheet_utils --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 4.5
package = babybiome_samplesheet_utils
